{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 114,
  "lineage": "5675a649-ab9d-5e43-a835-2ce8cb79d67f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "exemple_ipestatico",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e2d562134dd9101",
            "arn": "arn:aws:ec2:us-east-2:825765413912:elastic-ip/eipalloc-05e2d562134dd9101",
            "association_id": "eipassoc-0a09cb0cb8b8e6246",
            "domain": "vpc",
            "id": "eipalloc-05e2d562134dd9101",
            "instance": "i-00962683e313c97a9",
            "network_border_group": "us-east-2",
            "network_interface": "eni-061a0e6848282f5f0",
            "private_dns": "ip-10-0-1-66.us-east-2.compute.internal",
            "private_ip": "10.0.1.66",
            "public_dns": "ec2-3-149-197-161.us-east-2.compute.amazonaws.com",
            "public_ip": "3.149.197.161",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.exemple_instance",
            "aws_internet_gateway.exemple_igw",
            "aws_security_group.exemple_sg",
            "aws_subnet.exemple_subnet",
            "aws_vpc.exemple",
            "data.aws_secretsmanager_secret.secret",
            "data.aws_secretsmanager_secret_version.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "exemple_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0eb9d6fc9fab44d24",
            "arn": "arn:aws:ec2:us-east-2:825765413912:instance/i-00962683e313c97a9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00962683e313c97a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-061a0e6848282f5f0",
            "private_dns": "ip-10-0-1-66.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.66",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00f4d132ec697ee8b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f9a96d7ef9accfe",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00fdeee6dde97b790"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.exemple_sg",
            "aws_subnet.exemple_subnet",
            "aws_vpc.exemple",
            "data.aws_secretsmanager_secret.secret",
            "data.aws_secretsmanager_secret_version.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "exemple_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825765413912:internet-gateway/igw-0f39f99b7f870f265",
            "id": "igw-0f39f99b7f870f265",
            "owner_id": "825765413912",
            "region": "us-east-2",
            "vpc_id": "vpc-0fb294cd64b3f5c11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.exemple"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "exemple_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825765413912:route-table/rtb-0ed4e19028e186f22",
            "id": "rtb-0ed4e19028e186f22",
            "owner_id": "825765413912",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f39f99b7f870f265",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fb294cd64b3f5c11"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.exemple_igw",
            "aws_vpc.exemple"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "exemple_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068afd9e7ec6e7f61",
            "region": "us-east-2",
            "route_table_id": "rtb-0ed4e19028e186f22",
            "subnet_id": "subnet-00f9a96d7ef9accfe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.exemple_igw",
            "aws_route_table.exemple_route_table",
            "aws_subnet.exemple_subnet",
            "aws_vpc.exemple"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "exemple_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825765413912:security-group/sg-00fdeee6dde97b790",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00fdeee6dde97b790",
            "ingress": [],
            "name": "Allow SSH",
            "name_prefix": "",
            "owner_id": "825765413912",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow SSH"
            },
            "tags_all": {
              "Name": "Allow SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb294cd64b3f5c11"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.exemple"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "exemple_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825765413912:subnet/subnet-00f9a96d7ef9accfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f9a96d7ef9accfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825765413912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "vpc_id": "vpc-0fb294cd64b3f5c11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.exemple"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "exemple",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825765413912:vpc/vpc-0fb294cd64b3f5c11",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c8653c9d8a091f6e",
            "default_route_table_id": "rtb-08eaf328891931033",
            "default_security_group_id": "sg-01f125d301658846f",
            "dhcp_options_id": "dopt-0ef6b1f151df85df5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb294cd64b3f5c11",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08eaf328891931033",
            "owner_id": "825765413912",
            "region": "us-east-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "exemple_sg_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825765413912:security-group-rule/sgr-0337b2892f696418d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0337b2892f696418d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-00fdeee6dde97b790",
            "security_group_rule_id": "sgr-0337b2892f696418d",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.exemple_sg",
            "aws_vpc.exemple"
          ]
        }
      ]
    }
  ]
}